--- a/src/containers/benefits/benefits.css
+++ b/src/containers/benefits/benefits.css
@@ -1,36 +1,38 @@
 .medisync__benefits {
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: var(--font-family);
-    padding: 0 4rem;
 }
 
 .medisync__benefits h1 {
-    font-weight: 600;
-    font-size: 36px;
-    line-height: 44px;
+    font-weight: 500;
+    font-size: 42px;
+    line-height: 62px;
     text-align: center;
     letter-spacing: -0.02em;
     color: #1B1A1A;
-    padding: 0 15rem;
+    max-width: 600px;  
+    margin: 0 auto;
+    padding: 50px 0 6px 0;
 }
 
 .medisync__benefits p {
     font-weight: 400;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 32px;
     text-align: center;
     color: #656462;
-    padding: 2rem 7rem;
+    max-width: 700px;
+    margin: 0 auto;
+    padding-bottom: 60px;
 }
 
 .medisync__benefits-tabs {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
+    padding: 20px;
 }
 
 .medisync__benefits-tabs_tab {
@@ -38,11 +40,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 1.5rem;
     width: 236px;
     height: 264px;
     background: #FFFFFF;
     border-radius: 10px;
+    margin: 0 auto;
+    padding: 2px 2px;
 }
 
 .medisync__benefits-tabs_tab-icons img {
@@ -50,7 +53,7 @@
 }
 
 .medisync__benefits-tabs_tab p {
-    font-weight: 600;
+    font-weight: 500;
     font-size: 14px;
     line-height: 20px;
     padding: 1rem 2rem;
@@ -63,7 +66,7 @@
     border-radius: 20px;
     padding: 0.1rem 2.5rem;
 
-    font-weight: 700;
+    font-weight: 500;
     font-size: 18px;
     line-height: 28px;
     color: #500680;
@@ -81,8 +84,7 @@
     }
 
     .medisync__benefits-tabs_tab {
-        width: 300px;
-        height: 264px;
+        margin: 10px 10px;
     }
 }
 
@@ -97,12 +99,13 @@
     }
 
     .medisync__benefits-tabs_tab {
-        width: 400px;
-        height: 264px;
     }
 }
 
 @media screen and (max-width: 490px) {
+    .medisync__benefits{
+        padding: 0 0;
+    }
     .medisync__benefits h1 {
         padding: 0 0.5rem;
         font-size: 30px;
@@ -112,5 +115,17 @@
     .medisync__benefits p {
         padding: 1rem 1.6rem;
         font-size: 18px;
+    }
+
+    .medisync__benefits-tabs_tab {
+        width: 100%;
+    }
+
+    .medisync__benefits-tabs_tab p {
+        font-size: 16px;
+    }
+
+    .medisync__benefits-tabs_tab button {
+        font-size: 16px;
     }
 }
