--- a/src/components/feature/feature.css
+++ b/src/components/feature/feature.css
@@ -1,9 +1,8 @@
 .medisync__feature {
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin: 6rem 6rem;
-    padding: 1.6rem 5rem;
+    justify-content: space-evenly;
+    margin: 20px 40px;
+    padding: 21px 0;
     font-family: var(--font-family);
     border-radius: 5px;
     background: #fff;
@@ -15,58 +14,47 @@
     align-items: center;
 }
 
+.medisync__feature-image img{
+    width: 70px;
+    padding-right: 10px;
+}
+
 .medisync__feature-text h1 {
     font-weight: 700;
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 20px;
+    line-height: 0px;
     color: #460570;
 }
 
 .medisync__feature-text p {
     font-weight: 400;
-    font-size: 18px;
-    line-height: 28px;
+    font-size: 16px;
     color: #656462;
 }
 
 @media screen and (max-width: 1050px) {
     .medisync__feature {
         flex-direction: column;
-        padding-left: 4rem;
-        margin: 4rem;
+        padding: 30px;
+        margin: 20px 40px;
+    }
+
+    .medisync__feature-privacy {
+        padding: 10px;
     }
 }
 
 @media screen and (max-width: 700px) {
     .medisync__feature {
-        padding-left: 2rem;
-        margin: 2rem 4rem;
+        margin: 30px 0;
+        padding: 20px;
     }
 
     .medisync__feature-text h1 {
         font-size: 18px;
-        line-height: 32px;
     }
     
     .medisync__feature-text p {
-        font-size: 16px;
-        line-height: 28px;
-    }
-}
-
-@media screen and (max-width: 490px) {
-    .medisync__feature {
-        padding-left: 2rem;
-        margin: 2rem;
-    }
-
-    .medisync__feature-text h1 {
-        font-size: 18px;
-        line-height: 32px;
-    }
-    
-    .medisync__feature-text p {
-        font-size: 16px;
-        line-height: 28px;
+        font-size: 14px;
     }
 }
