--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -11,28 +11,28 @@
 }
 
 .medisync__footer_sections_contact-logo {
-    padding: 1rem 0;
+    padding: 12px 0 0 0;
 }
 
 .medisync__footer_sections_contact p {
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 28px;
     color: #000000;
-    padding: 0 0 1rem 2rem;
+    padding: 0 0 0 24px;
 }
 
 .medisync__footer_sections_contact-icons {
-    padding: 0 0 0 2rem;
+    padding: 0 0 0 24px;
 }
 
 .medisync__footer_sections_contact-icons img {
-    padding: 0 0.5rem;
+    padding: 0 6px;
 }
 
 .medisync__footer_sections_section h1 {
     font-weight: 400;
-    font-size: 36px;
+    font-size: 32px;
     line-height: 44px;
     letter-spacing: -0.02em;
     color: #000000;
@@ -40,15 +40,15 @@
 
 .medisync__footer_sections_section p {
     font-weight: 500;
-    font-size: 18px;
-    line-height: 28px;
+    font-size: 16px;
+    line-height: 12px;
+    padding-left: 24px;
     color: #000000;
-    padding: 0.6rem 0;
 }
 
 .medisync__footer-copyright {
     font-weight: 500;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 28px;
     color: #939393;
 }
@@ -59,12 +59,35 @@
     }
 
     .medisync__footer_sections_section {
-        padding: 2rem 0;
+        padding: 10px 0;
     }
-}
 
-@media screen and (max-width: 800px) {
-    .medisync__footer_sections {
-        flex-direction: column;
+    .medisync__footer_sections_contact-logo {
+        padding: 0;
+    }
+    
+    .medisync__footer_sections_contact p {
+        font-size: 12px;
+        line-height: 10px;
+        padding: 0 0 0 24px;
+    }
+    
+    .medisync__footer_sections_contact-icons {
+        padding: 0 0 0 12px;
+    }
+    
+    .medisync__footer_sections_section h1 {
+        font-size: 20px;
+        line-height: 30px;
+    }
+    
+    .medisync__footer_sections_section p {
+        font-size: 12px;
+        line-height: 8px;
+    }
+
+    .medisync__footer-copyright {
+        font-size: 11px;
+        line-height: 28px;
     }
 }
