--- a/src/containers/joinus/joinus.css
+++ b/src/containers/joinus/joinus.css
@@ -1,16 +1,21 @@
+body {
+    background: #f6f6f6;
+}
+
+a {
+    color: unset;
+    text-decoration: none;
+}
+
 .medisync__joinus {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 7rem 0;
+    padding: 170px 0;
     font-family: var(--font-family);
 }
 
 .medisync__joinus h2 {
     font-weight: 700;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 2px;
     text-align: center;
     letter-spacing: 0.2px;
     color: #460570;
@@ -18,17 +23,16 @@
 
 .medisync__joinus h1 {
     font-weight: 700;
-    font-size: 36px;
-    line-height: 44px;
+    font-size: 50px;
+    line-height: 2px;
     text-align: center;
     letter-spacing: -0.02em;
     color: #252B42;
-    padding: 1rem;
 }
 
 .medisync__joinus p {
     font-weight: 400;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 32px;
     text-align: center;
     color: #656462;
@@ -36,34 +40,28 @@
 }
 
 .medisync__joinus_input {
-    width: 100%;
-    margin: 1rem 0 2rem 0;
-
     display: flex;
-    padding: 0 12rem;
+    justify-content: center;
 }
 
 .medisync__joinus_input input {
-    flex: 2;
-    width: 100%;
     min-height: 50px;
     background: #FFFFFF;
     border: 1px solid #CBCAC8;
     border-radius: 5px 0 0 5px;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 14px;
     line-height: 27px;
     color: #656462;
-    padding-left: 2rem;
+    padding: 0 200px 0 20px;
 }
 
 .medisync__joinus_input button {
-    flex: 0.6;
-    width: 100%;
     min-height: 50px;
-
     background: #460570;
-    border: 1px solid #CBCAC8;
+    border-left: 1px solid #CBCAC8;
+    border-top: 1px solid #CBCAC8;
+    border-bottom: 1px solid #CBCAC8;
     border-radius: 0px 5px 5px 0px;
     font-weight: 400;
     font-size: 14px;
@@ -71,11 +69,39 @@
     text-align: center;
     letter-spacing: 0.2px;
     color: #FFFFFF;
+    padding: 0 60px;
 }
 
 @media screen and (max-width: 650px) {
     .medisync__joinus_input {
         padding: 0 6rem;
+    }
+
+    .medisync__joinus {
+        padding: 100px 0;
+    }
+    
+    .medisync__joinus h2 {
+        font-size: 12px;
+    }
+    
+    .medisync__joinus h1 {
+        font-size: 30px;
+    }
+    
+    .medisync__joinus p {
+        font-size: 16px;
+        margin: 1rem;
+    }
+    
+    .medisync__joinus_input input {
+        font-size: 12px;
+        padding: 0 70px 0 20px;
+    }
+    
+    .medisync__joinus_input button {
+        font-size: 12px;
+        padding: 0 30px;
     }
 }
 
