--- a/src/containers/whyus/whyus.css
+++ b/src/containers/whyus/whyus.css
@@ -1,19 +1,11 @@
 .medisync__whyus {
-    display: flex;
-    justify-content: flex-start;
-    align-content: flex-start;
-    padding: 4rem;
+    padding: 60px 0;
     font-family: var(--font-family);
 }
 
-.medisync__whyus-left {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-
-.medisync__whyus-left-top h1 {
+.medisync__whyus h1 {
+    margin: 0 auto;
+    text-align: center;
     font-weight: 700;
     font-size: 36px;
     line-height: 44px;
@@ -21,99 +13,87 @@
     color: #1B1A1A;
 }
 
-.medisync__whyus-left-top p {
+.medisync__whyus p {
+    margin: 0 auto;
+    max-width: 450px;
+    text-align: center;
     font-weight: 400;
-    font-size: 24px;
-    line-height: 32px;
-    padding: 2rem 6rem 0 0;
+    font-size: 20px;
+    line-height: 24px;
+    padding: 20px 0;
     color: #656462;
 }
 
-.medisync__whyus-left-bottom {
-    margin-top: 4rem;
+.medisync__whyus-tabs {
     display: flex;
-    flex-wrap: wrap;
-}
-
-.medisync__whyus-left-bottom_section {
-    padding: 0 6rem 2rem 0;
-}
-
-.medisync__whyus-left-bottom_section h1 {
-    font-weight: 800;
-    font-size: 40px;
-    line-height: 32px;
-    color: #000000;
-    padding: 1rem 0;
-}
-
-.medisync__whyus-left-bottom_section p {
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 32px;
-    color: #747370;
-}
-
-.medisync__whyus-right {
-    display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
+    margin: 30px 0 50px 0;
 }
 
-.medisync__whyus-right_tab {
-    padding: 2rem;
-    margin: 0 1rem 1rem 0;
+.medisync__whyus-tabs_tab {
+    box-sizing: border-box;
+    padding: 15px 30px;
     width: 336px;
     height: 325px;
+    margin: 10px 0;
     background: #FFFFFF;
     box-shadow: 0px 16px 32px rgba(190, 190, 190, 0.2);
     border-radius: 10px;
 }
 
-.medisync__whyus-right_tab h1 {
+.medisync__whyus-tabs_tab-image {
+    height: 160px;
+}
+
+.medisync__whyus-tabs_tab h1 {
     font-weight: 700;
+    text-align: left;
     font-size: 18px;
     line-height: 28px;
     color: #1B1A1A;
 }
 
-.medisync__whyus-right_tab p {
+.medisync__whyus-tabs_tab p {
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
+    text-align: left;
     color: #656462;
     padding: 1rem 0 0 0;
 }
 
 @media screen and (max-width: 1050px) {
-    .medisync__whyus-right {
+    .medisync__whyus-tabs {
         flex-direction: column;
     }
 }
 
 @media screen and (max-width: 700px) {
-    .medisync__whyus {
-        flex-direction: column;
+    .medisync__whyus h1 {
+        font-size: 30px;
+    }
+    
+    .medisync__whyus p {
+        font-size: 16px;
+        padding: 0 30px;
     }
 
-    .medisync__whyus-left-bottom_section {
-        padding: 0 1rem 2rem 0;
+    .medisync__whyus-tabs_tab h1 {
+        font-weight: 700;
+        text-align: left;
+        font-size: 19px;
+        line-height: 28px;
+        color: #1B1A1A;
     }
-}
-
-@media screen and (max-width: 700px) {
-    .medisync__whyus-left-top p {
-        padding: 2rem 0 0 0;
-        font-size: 18px;
-    }
-
-    .medisync__whyus-left-bottom_section h1 {
-        font-size: 28px;
-        padding: 0.5rem 0;
-    }
-
-    .medisync__whyus-left-bottom_section p {
-        font-size: 18px;
-        line-height: 30px;
+    
+    .medisync__whyus-tabs_tab p {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+        text-align: left;
+        color: #656462;
+        padding: 1rem 0 0 0;
     }
 }
