--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -24,7 +24,6 @@
 
 .medisync__navbar-left img {
     position: relative;
-    width: 118.87px;
     height: 28.07px;
     padding-right: 100px;
 }
@@ -88,7 +87,7 @@
     color: #460570;
     background: #cecece;
     box-shadow: 0 0 2px #1B1A1A;
-    transition: 1s;
+    transition: 1s ease-in-out;
 }
 
 .medisync__navbar-menu {
