--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,4 @@
+@media screen and (min-width: 300px) {
 * {
   padding: 0;
   margin: 0;
@@ -16,7 +17,7 @@
   gap: 35px;
   width: 20%;
   padding: 30px 0 0 10px;
-  border-right: 1px solid gray;
+  border-right: 2px solid lightgrey;
 }
 
 .patient_image {
@@ -77,6 +78,8 @@ section {
   padding: 0 50px;
   height: 100px;
   width: 100%;
+  background: linear-gradient(0deg, #500680, #500680);
+  color: white;
   border-bottom: 1px solid gray;
 }
 
@@ -125,7 +128,7 @@ select {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 input {
@@ -133,14 +136,8 @@ input {
   width: 200px;
   border-radius: 5px;
   outline: none;
-  border: 1px solid gray;
-  padding: 0 10px 0 40px;
-}
-
-.container {
-  display: flex;
-  height: 100vh;
-  width: 100%;
+  border: 1px solid lightgrey;
+  padding: 0 10px 0 20px;
 }
 
 .first_section,
@@ -156,4 +153,109 @@ input {
   font-size: 20px;
   margin: 50px 0 50px 50px;
   color: gray;
+}
+
+.notification_icon {
+  border: 1px solid #fff;
+  border-radius: 7px;
+  padding: 5px;
+}
+
+.patient-details_first-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+}
+
+select {
+  width: 200px;
+  border: 1px solid lightgrey;
+  outline: none;
+}
+
+.disabilities_card,
+.allergies_card,
+.other-information_card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  height: 150px;
+  width: 600px;
+  border: 2px solid lightgrey;
+  border-radius: 10px;
+  font-weight: 600;
+  margin: 20px 50px 40px 0;
+}
+
+.new-entry_section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.allergy {
+  position: relative;
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: white;
+  padding: 30px;
+  border-radius: 10px;
+  width: 800px;
+  position: absolute;
+  top: 20%;
+  z-index: 1;
+}
+
+.modal_title {
+  margin-bottom: 30px;
+}
+
+.modal_body {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.modal_body h4:last-of-type {
+  margin: 10px 0 -20px 0;
+}
+
+.modal_body input {
+  width: 100%;
+  padding: 25px;
+}
+
+.calendar{
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid black;
+}
+
+.modal_footer {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.modal button {
+  width: 70px;
+  cursor: pointer;
+}
+
+.close_button {
+  background-color: white;
+  border: 1px solid #460570;
+  color: #460570;
+  font-weight: 600;
+}
+
 }
