added modals for the records

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,11 +1,8 @@
 @media screen and (min-width: 300px) {
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+body{
+  overflow-x: hidden;
   font-family: 'Poppins', sans-serif;
 }
-
 .app_container {
   display: flex;
   width: 100%;
@@ -33,18 +30,12 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 15px;
+  padding: 0;
+  margin: 0;
 }
 
 li {
   list-style: none;
-}
-
-a.active {
-  color: white;
-  padding: 10px;
-  background-color: #460570;
-  width: 95%;
-  border-radius: 10px;
 }
 
 a {  
@@ -53,7 +44,7 @@ a {
   align-items: center;
   font-size: 15px;
   font-weight: 600;
-  padding: 10px;
+  padding-left: 10px;
   width: 95%;
   text-decoration: none;
   color: black;
@@ -63,7 +54,7 @@ a {
 a:hover {
   color: white;
   background-color: #460570;
-  width: 95%;
+  width: 90%;
   border-radius: 10px;
 }
 
@@ -99,12 +90,29 @@ span {
   align-items: center;
 }
 
+
+
 .main_container {
   display: flex;
   justify-content: space-between;
   padding: 50px;
   padding-bottom: 0;
   position: relative;
+  /* overflow-y: scroll; */
+}
+
+.wallet_details {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
+
+.wallet_details button {
+  height: 50px;
+  width: 150px;
+  font-size: 15px;
 }
 
 select {
@@ -210,9 +218,6 @@ select {
   padding: 30px;
   border-radius: 10px;
   width: 800px;
-  position: absolute;
-  top: 20%;
-  z-index: 1;
 }
 
 .modal_title {
@@ -257,5 +262,25 @@ select {
   color: #460570;
   font-weight: 600;
 }
+
+.disabilities_modal {
+  position: absolute;
+  top: 27%;
+  z-index: 1;
+}
+
+.allergy_modal {
+  position: absolute;
+  top: 20%;
+  z-index: 1;
+}
+
+.other-information_modal {
+  position: absolute;
+  top: 78%;
+  z-index: 1;
+}
+
+
 
 }
