--- a/src/containers/joinus/joinus.css
+++ b/src/containers/joinus/joinus.css
@@ -42,34 +42,35 @@ a {
 .medisync__joinus_input {
     display: flex;
     justify-content: center;
+    align-items: center;
+    
 }
 
-.medisync__joinus_input input {
+.medisync__joinus_input form input {
     min-height: 50px;
+    min-width: 300px;
     background: #FFFFFF;
     border: 1px solid #CBCAC8;
     border-radius: 5px 0 0 5px;
     font-weight: 400;
     font-size: 14px;
-    line-height: 27px;
     color: #656462;
-    padding: 0 200px 0 20px;
+    padding: 0 50px 0 20px;
+    margin: 0;
 }
 
-.medisync__joinus_input button {
+.medisync__joinus_input form button {
     min-height: 50px;
     background: #460570;
-    border-left: 1px solid #CBCAC8;
-    border-top: 1px solid #CBCAC8;
-    border-bottom: 1px solid #CBCAC8;
+    border: 1px solid #CBCAC8;
     border-radius: 0px 5px 5px 0px;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 14px;
     line-height: 28px;
     text-align: center;
     letter-spacing: 0.2px;
     color: #FFFFFF;
-    padding: 0 60px;
+    padding: 0 50px;
 }
 
 @media screen and (max-width: 650px) {
