--- a/src/containers/feature/feature.css
+++ b/src/containers/feature/feature.css
@@ -23,7 +23,7 @@
     font-weight: 700;
     font-size: 20px;
     line-height: 0px;
-    color: #460570;
+    color: #436CDF;
 }
 
 .medisync__feature-text p {
