--- a/src/containers/benefits/benefits.css
+++ b/src/containers/benefits/benefits.css
@@ -62,14 +62,14 @@
 }
 
 .medisync__benefits-tabs_tab button {
-    background: #C59AE1;
+    background: #436CDF;
     border-radius: 20px;
     padding: 0.1rem 2.5rem;
 
     font-weight: 500;
     font-size: 18px;
     line-height: 28px;
-    color: #500680;
+    color: #d8d8d8;
     border: none;
     outline: none;
 }
