--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
-    background: #500680;
+    background: #436CDF;
     border-radius: 10px 0px 0px 10px;
     padding: 0 30px 0 60px;
 }
@@ -37,7 +37,7 @@
     font-weight: 600;
     font-size: 20px;
     line-height: 32px;
-    color: #500680;
+    color: #436CDF;
     border: none;
     outline: none;
     background: #FFFFFF;
@@ -57,6 +57,7 @@
 .medisync__header-image img{
     width: 100%;
     height: 100%;
+    border-radius: 0 10px 10px 0;
 }
 
 @media screen and (max-width: 1050px) {
@@ -71,6 +72,10 @@
     
     .medisync__header-content p {
         margin: 0;   
+    }
+
+    .medisync__header-image img{
+        border-radius: 0 0 10px 10px;
     }
 }
 
