--- a/src/containers/loginpage/loginpage.css
+++ b/src/containers/loginpage/loginpage.css
@@ -28,7 +28,7 @@ body {
     font-size: 36px;
     line-height: 30px;
     letter-spacing: -0.02em;
-    color: #7209B7;
+    color: #436CDF;
     margin: 0;
 }
 
@@ -50,7 +50,7 @@ body {
     width: 375px;
     height: 35px;
     background: #F1E6F8;
-    border: 2px solid #9412ED;
+    border: 2px solid #436CDF;
     border-radius: 8px;
     margin-bottom: 10px;
 
@@ -69,7 +69,7 @@ body {
 .login-form button {
     width: 385px;
     height: 40px;
-    background: #8A33C3;
+    background: #436CDF;
     border: none;
     border-radius: 8px;
 
@@ -83,7 +83,7 @@ body {
 
 .login-form button:hover {
     background: #bbbbbb;
-    color: #8A33C3;
+    color: #436CDF;
     transition: 0.6s;
 }
 
@@ -116,20 +116,24 @@ body {
     }
 
     .medisync__loginpage-body_form {
-        padding: 30px 80px;
+        padding: 30px 50px;
     }
 }
 
-@media screeen and (max-width: 490px) {
+@media screen and (max-width: 490px) {
     .medisync__loginpage {
-        padding: 10px;
+        padding: 50px 10px;
     }
 
     .login-form input {
-        width: 200px;
+        width: 250px;
     }
 
     .login-form button {
-        width: 200px;
+        width: 270px;
+    }
+
+    .medisync__loginpage-body_image {
+        margin-bottom: 150px;
     }
 }
