--- a/src/containers/navbar/navbar.css
+++ b/src/containers/navbar/navbar.css
@@ -45,6 +45,7 @@
 }
 
 .medisync__navbar-menu_container p {
+    width: 150px;
     color: #1B1A1A;
     font-family: var(--font-family);
     font-weight: 400;
@@ -57,7 +58,7 @@
 
 .medisync__navbar-links p:hover,
 .medisync__navbar-menu_container p:hover {
-    color: #460570;
+    color: #436CDF;
     font-weight: 700;
     transition: 2s;
     transform-style: flats;
@@ -72,7 +73,7 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 32px;
-    background: #460570;
+    background: #436CDF;
     border-radius: 8px;
     border: none;
     outline: none;
@@ -81,7 +82,7 @@
 
 .medisync__navbar-right button:hover,
 .medisync__navbar-menu_container-links-wallet button:hover {
-    color: #460570;
+    color: #436CDF;
     background: #cecece;
     box-shadow: 0 0 2px #1B1A1A;
     transition: 1s;
@@ -114,7 +115,7 @@
 }
 
 .medisync__navbar-menu_container-links button {
-    padding: 7px 10px;
+    padding: 7px 15px;
     font-size: 15px;
 }
 
@@ -127,7 +128,7 @@
 }
 
 .active {
-    color: #530885;
+    color: #436CDF;
     font-weight: 700;
 }
 
