--- a/src/containers/welcomepage/welcomepage.css
+++ b/src/containers/welcomepage/welcomepage.css
@@ -29,7 +29,7 @@ body {
     line-height: 30px;
     margin: 0;
     letter-spacing: -0.02em;
-    color: #7209B7;
+    color: #436CDF;
     text-align: center;
 }
 
@@ -55,7 +55,7 @@ body {
 .medisync__welcomepage-body_text button {
     padding: 12px 55px;
     margin: 0 auto;
-    background: #8A33C3;
+    background: #436CDF;
     border: none;
     outline: none;
     box-shadow: 0px 2px 4px rgba(190, 190, 190, 0.2);
@@ -98,32 +98,37 @@ body {
 
 @media screen and (max-width: 550px) {
     .medisync__welcomepage {
-        padding: 10px;
+        padding: 50px 10px;
     }
 
     .medisync__welcomepage-body_text h1 {
-        font-size: 24px;
-        line-height: 40px;
+        font-size: 26px;
+        line-height: 35px;
     }
     
     .medisync__welcomepage-body_text h2 {
-        font-size: 18px;
+        font-size: 22px;
         line-height: 60px;
     }
     
     .medisync__welcomepage-body_text p {
-        font-size: 12px;
+        font-size: 18px;
         padding-bottom: 20px;
-        line-height: 20px;
+        line-height: 28px;
     }
     
     .medisync__welcomepage-body_text button {
         padding: 10px 55px;
-        font-size: 14px;
+        font-size: 16px;
     }
 
     .medisync__welcomepage-body_text {
         padding: 30px 40px;
+    }
+
+    .medisync__welcomepage-body_image {
+        min-width: 50%;
+        margin-bottom: 150px;
     }
 
     
