--- a/src/containers/aboutus/aboutus.css
+++ b/src/containers/aboutus/aboutus.css
@@ -16,7 +16,7 @@
     line-height: 72px;
     text-align: center;
     letter-spacing: -0.02em;
-    color: #8A33C3;
+    color: #436CDF;
 }
 
 .medisync__aboutus_text p {
