--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -1,5 +1,5 @@
 .medisync__footer {
-    background: #F1E6F8;
+    background: #E8EDFB;
     font-family: var(--font-family);
     padding: 4rem 4rem 1rem 4rem;
 }
