--- a/src/containers/loginpage/loginpage.css
+++ b/src/containers/loginpage/loginpage.css
@@ -5,7 +5,7 @@ body {
 }
 
 .medisync__loginpage {
-    background: #F1E6F8;
+    background: #E8EDFB;
     padding: 40px;
     font-family: var(--font-family);
 }
@@ -43,13 +43,13 @@ body {
     font-size: 14px;
     line-height: 28px;
     text-align: left;
-    color: #C59AE1;
+    color: #868686;
 }
 
 .login-form input {
     width: 375px;
     height: 35px;
-    background: #F1E6F8;
+    background: #E8EDFB;
     border: 2px solid #436CDF;
     border-radius: 8px;
     margin-bottom: 10px;
@@ -96,10 +96,12 @@ body {
 
 .medisync__loginpage-body_image {
     min-width: 50%;
+    margin: 0 0 30px 0;
 }
 
 .medisync__loginpage-body_image img {
     max-width: 100%;
+    border-radius: 0 10px 10px 0;
 }
 
 @media screen and (max-width: 1100px) {
