--- a/src/containers/ourservices/ourservices.css
+++ b/src/containers/ourservices/ourservices.css
@@ -8,7 +8,7 @@
     line-height: 72px;
     text-align: center;
     letter-spacing: -0.02em;
-    color: #8A33C3;
+    color: #436CDF;
 }
 
 .medisync__ourservices_tabs {
