--- a/src/containers/registerpage/registerpage.css
+++ b/src/containers/registerpage/registerpage.css
@@ -5,7 +5,7 @@ body {
 }
 
 .medisync__registerpage {
-    background: #F1E6F8;
+    background: #E8EDFB;
     padding: 40px;
     font-family: var(--font-family);
 }
@@ -51,13 +51,13 @@ body {
     font-size: 14px;
     line-height: 28px;
     text-align: left;
-    color: #C59AE1;
+    color: #868686;
 }
 
 .register-form input {
     width: 340px;
     height: 35px;
-    background: #F1E6F8;
+    background: #E8EDFB;
     border: 2px solid #436CDF;
     border-radius: 8px;
     margin-bottom: 10px;
@@ -108,6 +108,7 @@ body {
 
 .medisync__registerpage-body_image img {
     max-width: 100%;
+    border-radius: 0 10px 10px 0;
 }
 
 .successful {
