--- a/src/containers/welcomepage/welcomepage.css
+++ b/src/containers/welcomepage/welcomepage.css
@@ -5,7 +5,7 @@ body {
 }
 
 .medisync__welcomepage {
-    background: #F1E6F8;
+    background: #E8EDFB;
     padding: 40px;
     font-family: var(--font-family);
 }
@@ -73,6 +73,7 @@ body {
 
 .medisync__welcomepage-body_image img {
     max-width: 100%;
+    border-radius: 0 10px 10px 0;
 }
 
 @media screen and (max-width: 1050px) {
