--- a/src/containers/joinus/joinus.css
+++ b/src/containers/joinus/joinus.css
@@ -8,7 +8,7 @@ a {
 }
 
 .medisync__joinus {
-    padding: 170px 0;
+    padding: 100px 0;
     font-family: var(--font-family);
 }
 
@@ -18,7 +18,7 @@ a {
     line-height: 2px;
     text-align: center;
     letter-spacing: 0.2px;
-    color: #460570;
+    color: #436CDF;
 }
 
 .medisync__joinus h1 {
@@ -55,22 +55,23 @@ a {
     font-weight: 400;
     font-size: 14px;
     color: #656462;
-    padding: 0 50px 0 20px;
+    padding: 0 20px;
     margin: 0;
 }
 
 .medisync__joinus_input form button {
     min-height: 50px;
-    background: #460570;
-    border: 1px solid #CBCAC8;
+    background: #436CDF;
+    border: none;
+    outline: none;
     border-radius: 0px 5px 5px 0px;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 14px;
     line-height: 28px;
     text-align: center;
     letter-spacing: 0.2px;
     color: #FFFFFF;
-    padding: 0 50px;
+    padding: 0 20px;
 }
 
 @media screen and (max-width: 650px) {
@@ -95,19 +96,22 @@ a {
         margin: 1rem;
     }
     
-    .medisync__joinus_input input {
+    .medisync__joinus_input form input {
         font-size: 12px;
-        padding: 0 70px 0 20px;
+        padding: 0 20px 0 20px;
+        min-width: 10px;
     }
     
-    .medisync__joinus_input button {
+    .medisync__joinus_input form button {
         font-size: 12px;
-        padding: 0 30px;
+        font-family: var(--font-family);
+        padding: 0 20px;
+
     }
 }
 
 @media screen and (max-width: 490px) {
     .medisync__joinus_input {
-        padding: 0 2rem;
+        padding: 0 20px;
     }
 }
