--- a/src/containers/navbar/navbar.css
+++ b/src/containers/navbar/navbar.css
@@ -1,3 +1,37 @@
+.scale-up-ver-top {
+	-webkit-animation: scale-up-ver-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	        animation: scale-up-ver-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+ @-webkit-keyframes scale-up-ver-top {
+    0% {
+      -webkit-transform: scaleY(0.4);
+              transform: scaleY(0.4);
+      -webkit-transform-origin: 100% 0%;
+              transform-origin: 100% 0%;
+    }
+    100% {
+      -webkit-transform: scaleY(1);
+              transform: scaleY(1);
+      -webkit-transform-origin: 100% 0%;
+              transform-origin: 100% 0%;
+    }
+  }
+  @keyframes scale-up-ver-top {
+    0% {
+      -webkit-transform: scaleY(0.4);
+              transform: scaleY(0.4);
+      -webkit-transform-origin: 100% 0%;
+              transform-origin: 100% 0%;
+    }
+    100% {
+      -webkit-transform: scaleY(1);
+              transform: scaleY(1);
+      -webkit-transform-origin: 100% 0%;
+              transform-origin: 100% 0%;
+    }
+  }
+
 .medisync__navbar {
     display: flex;
     justify-content: space-between;
@@ -24,7 +58,8 @@
 
 .medisync__navbar-left img {
     position: relative;
-    height: 28.07px;
+    width: auto;
+    height: 40px;
     padding-right: 100px;
 }
 
@@ -44,6 +79,7 @@
 }
 
 .medisync__navbar-menu_container p {
+    width: 150px;
     color: #1B1A1A;
     font-family: var(--font-family);
     font-weight: 400;
@@ -56,7 +92,7 @@
 
 .medisync__navbar-links p:hover,
 .medisync__navbar-menu_container p:hover {
-    color: #460570;
+    color: #436CDF;
     font-weight: 700;
     transition: 2s;
     transform-style: flats;
@@ -71,7 +107,7 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 32px;
-    background: #460570;
+    background: #436CDF;
     border-radius: 8px;
     border: none;
     outline: none;
@@ -80,10 +116,10 @@
 
 .medisync__navbar-right button:hover,
 .medisync__navbar-menu_container-links-wallet button:hover {
-    color: #460570;
+    color: #436CDF;
     background: #cecece;
     box-shadow: 0 0 2px #1B1A1A;
-    transition: 1s ease-in-out;
+    transition: 1s;
 }
 
 .medisync__navbar-menu {
@@ -113,7 +149,7 @@
 }
 
 .medisync__navbar-menu_container-links button {
-    padding: 7px 10px;
+    padding: 7px 15px;
     font-size: 15px;
 }
 
@@ -126,7 +162,7 @@
 }
 
 .active {
-    color: #530885;
+    color: #436CDF;
     font-weight: 700;
 }
 
