--- a/src/containers/registerpage/registerpage.css
+++ b/src/containers/registerpage/registerpage.css
@@ -88,6 +88,7 @@ body {
     text-align: center;
     color: #F1E6F8;
     margin-top: 20px;
+    cursor: pointer;
 }
 
 .register-form button:hover {
@@ -96,10 +97,18 @@ body {
 }
 
 .medisync__registerpage-login {
+    display: flex;
+    gap: 5px;
     background: none;
     color: #6b6b6b;
     border: none;
     margin: 5px 0;
+}
+
+.medisync__registerpage-login span {
+    font-weight: 600;
+    color: #7209B7;
+    cursor: pointer;
 }
 
 .medisync__registerpage-body_image {
