signup and login code refactoring

--- a/src/containers/registerpage/registerpage.css
+++ b/src/containers/registerpage/registerpage.css
@@ -132,7 +132,7 @@ body {
 .medisync__registerpage-login {
     display: flex;
     background: none;
-    color: #6b6b6b;
+    color: #436CDF;
     border: none;
     margin: 10px 0;
 }
