--- a/src/containers/loginpage/loginpage.css
+++ b/src/containers/loginpage/loginpage.css
@@ -47,7 +47,7 @@ body {
 }
 
 .login-form input {
-    width: 375px;
+    width: 340px;
     height: 35px;
     background: #E8EDFB;
     border: 2px solid #436CDF;
@@ -70,12 +70,11 @@ body {
 
 
 .login-form button  {
-    width: 385px;
+    width: 355px;
     height: 40px;
     background: #436CDF;
     border: none;
     border-radius: 8px;
-
     font-weight: 500;
     font-size: 16px;
     line-height: 28px;
@@ -86,7 +85,7 @@ body {
 }
 
 .password input {
-    width: 339px;
+    width: 310px;
     border-right: none;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
@@ -94,11 +93,11 @@ body {
     border-top-right-radius: 0;
 }
 
-.password button {
+.password span {
     background: none;
     color: #4e4e4e;
-    width: 40px;
-    height:41px;
+    width: 20px;
+    height: 15px;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 0;
@@ -116,11 +115,6 @@ body {
     transition: 0.6s;
 }
 
-.password button:hover {
-    background: none;
-    color: #4e4e4e;
-}
-
 .medisync__loginpage-login {
     display: flex;
     background: none;
@@ -132,12 +126,6 @@ body {
 .medisync__loginpage-login-signup {
     color: #436CDF;
     padding-left: 10px;
-}
-
-.medisync__loginpage-login span {
-    font-weight: 600;
-    color: #7209B7;
-    cursor: pointer;
 }
 
 .medisync__loginpage-body_image {
