--- a/src/containers/registerpage/registerpage.css
+++ b/src/containers/registerpage/registerpage.css
@@ -76,7 +76,6 @@ body {
     background: #436CDF;
     border: none;
     border-radius: 8px;
-
     font-weight: 500;
     font-size: 16px;
     line-height: 28px;
@@ -94,7 +93,7 @@ body {
 }
 
 .password input {
-    width: 300px;
+    width: 310px;
     height: 35px;
     border-right: none;
     border-top-left-radius: 8px;
@@ -103,11 +102,11 @@ body {
     border-top-right-radius: 0;
 }
 
-.password button {
+.password span {
     background: none;
     color: #4e4e4e;
-    width: 40px;
-    height:41px;
+    width: 20px;
+    height: 15px;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 0;
@@ -122,30 +121,20 @@ body {
 .register-form button:hover {
     background: #c9c9c9;
     color: #383838;
+    transition: 1s;
 }
 
-.password button:hover {
-    background: none;
-    color: #4e4e4e;
-}
-
-.medisync__registerpage-login {
+.medisync__registerpage-signup {
     display: flex;
-    background: none;
-    color: #436CDF;
-    border: none;
+    color: #6b6b6b;
     margin: 10px 0;
 }
 
-.medisync__registerpage-login-signup {
-    color: #436CDF;
-    padding-left: 10px;
-}
-
-.medisync__registerpage-login span {
+.medisync__registerpage-signup-login {
     font-weight: 600;
-    color: #7209B7;
+    color: #436CDF;
     cursor: pointer;
+    padding-left: 10px;
 }
 
 .medisync__registerpage-body_image {
