--- a/src/containers/wallet/wallet.css
+++ b/src/containers/wallet/wallet.css
@@ -26,7 +26,7 @@
     color: #1CB335;
 }
 
-/* .medisync__wallet_details-button button {
+.medisync__wallet_details-button button {
     display: flex;
     margin: 0 auto;
     width: 450px;
