--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -4,6 +4,7 @@
     background: #F6F6F6;
     padding: 30px 40px;
     font-family: var(--font-family);
+    margin-top: 20px;
 }
 
 .medisync__header-content {
@@ -23,26 +24,27 @@
 
 .medisync__header-content h1 {
     font-weight: 500;
-    font-size: 48px;
-    line-height: 72px;
+    font-size: 30px;
+    line-height: 52px;
     color: #FFFFFF;
     cursor:default;   
 }
 
 .medisync__header-content p {
     font-weight: 500;
-    font-size: 20px;
-    line-height: 28px;
+    font-size: 15px;
+    line-height: 1.5rem;
+    padding: 0 50px 0 0;
     color: #FFFFFF;
     margin: 0 90px 0 0;
     cursor: default;
 }
 
 .medisync__header-content__demo button {
-    padding: 15px 26px;
+    padding: 5px 10px;
     margin-top: 32px;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 12px;
     line-height: 32px;
     color: #436CDF;
     border: none;
