--- a/src/containers/navbar/navbar.css
+++ b/src/containers/navbar/navbar.css
@@ -47,6 +47,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    background-color: white;
+    padding: 0 40px;
 }
 
 .medisync__navbar-left {
@@ -65,14 +71,14 @@
 
 .medisync__navbar-links {
     display: flex;
-    justify-content: flex;
+    margin-left: 120px;
 }
 
 .medisync__navbar-links p {
     color: #1B1A1A;
     font-family: var(--font-family);
     font-weight: 400;
-    font-size: 16px;
+    font-size: 12px;
     line-height: 28px;
     padding-left: 40px;
     cursor: pointer;
@@ -100,13 +106,13 @@
 
 .medisync__navbar-right button,
 .medisync__navbar-menu_container-links-wallet button {
-    padding: 5px 40px;
-    margin-left: 10px;
+    padding: 0 10px;
     color: #fff;
+    margin-left: -10px;
     font-family: var(--font-family);
     font-style: normal;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 12px;
     line-height: 32px;
     background: #436CDF;
     border-radius: 5px;
