--- a/src/containers/walletdr/walletDr.css
+++ b/src/containers/walletdr/walletDr.css
@@ -51,3 +51,27 @@
     outline: none;
     cursor: pointer;
 }
+
+.get-all-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    height: 90vh;
+}
+
+.get-all-info h2 {
+    margin: 0;
+}
+
+.get-all-info input {
+    height: 40px !important;
+    width: 300px;
+}
+
+.get-all-info button {
+    height: 40px !important;
+    width: 100px;
+    padding: 0;
+}
