--- a/src/containers/registerpage/registerpage.css
+++ b/src/containers/registerpage/registerpage.css
@@ -5,6 +5,7 @@ body {
 }
 
 .medisync__registerpage {
+    margin-top: 70px;
     background: #E8EDFB;
     padding: 40px;
     font-family: var(--font-family);
