--- a/src/containers/aboutus/aboutus.css
+++ b/src/containers/aboutus/aboutus.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 60px 0 60px;
+    margin-top: 70px;
 }
 
 .medisync__aboutus_text {
