--- a/src/containers/loginpage/loginpage.css
+++ b/src/containers/loginpage/loginpage.css
@@ -6,6 +6,7 @@ body {
 
 .medisync__loginpage {
     background: #E8EDFB;
+    margin-top: 70px;
     padding: 40px;
     font-family: var(--font-family);
 }
