--- a/src/containers/walletdr/walletDr.css
+++ b/src/containers/walletdr/walletDr.css
@@ -34,11 +34,12 @@
     line-height: 20px;
     text-align: center;
     color: #1CB335;
+    margin-top: 10px;
 }
 
 .medisync__wallet_details button {
     display: block;
-    margin: 0 auto;
+    margin: 20px auto 300px auto;
     font-weight: 500;
     font-size: 16px;
     line-height: 32px;
