--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 300px) {
+/* @media screen and (min-width: 300px) { */
 /* body{
   overflow-x: hidden;
   font-family: 'Poppins', sans-serif;
@@ -13,21 +13,30 @@ body{
 
 .app_container {
   display: flex;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .side_bar {
   display: flex;
   flex-direction: column;
   gap: 35px;
-  width: 20%;
+  width: 250px;
   padding: 30px 0 200px 10px;
   border-right: 2px solid lightgrey;
 }
 
+.side_bar-image {
+  display: flex;
+  flex-direction: column;
+}
+
+.logout_btn {
+  margin-top: 50%;
+}
+
 .patient_image {
-  width: 70px;
-  margin-left: 80px;
+  width: 50px;
+  margin: 20px auto;
 }
 
 .logo {
@@ -52,9 +61,9 @@ li {
   gap: 10px;
   align-items: center;
   font-size: 15px;
-  font-weight: 600;
+  font-weight: 500;
   padding-left: 15px;
-  width: 95%;
+  padding-right: 15px;
   text-decoration: none;
   color: black;
   transition: 0.3s ease-in-out;
@@ -63,12 +72,15 @@ li {
 .dashboard_link:hover {
   color: white;
   background-color: #436CDF;
-  width: 90%;
   border-radius: 5px;
 }
 
+.dashboard_link img {
+  width: 20px;
+}
+
 section {
-  width: 80%;
+  width: 100%;
 }
 
 .nav_bar {
@@ -83,6 +95,11 @@ section {
   border-bottom: 1px solid gray;
 }
 
+.nav_bar h2 {
+  font-size: 35px;
+  font-weight: 400;
+}
+
 button {
   border: 1px solid  #436CDF;
   border-radius: 5px;
@@ -95,8 +112,10 @@ button {
 
 span {
   display: flex;
+  flex-direction: row;
   gap: 10px;
   align-items: center;
+  /* flex-wrap: wrap; */
 }
 
 
@@ -153,8 +172,13 @@ select {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   width: 100%;
   margin-bottom: 50px;
+}
+
+.info_section button {
+  width: 300px;
 }
 
 input {
@@ -206,20 +230,45 @@ select {
   outline: none;
 }
 
+.info_section2 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
 .disabilities_card,
 .allergies_card,
 .other-information_card {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: left;
   gap: 10px;
-  height: 150px;
+  height: auto;
   width: 600px;
   border: 2px solid lightgrey;
   border-radius: 10px;
   font-weight: 600;
   margin: 20px 50px 40px 0;
+}
+
+.disabilities_card1,
+.allergies_card1,
+.other-information_card1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  height: auto;
+  width: 600px;
+  border: 2px solid lightgrey;
+  border-radius: 10px;
+  font-weight: 600;
+  margin: 20px 50px 40px 0;
+  padding: 50px 0;
+}
+
+.disabilities_card img {
+  width: 60px;
 }
 
 .new-entry_section {
@@ -314,6 +363,50 @@ select {
   z-index: 1;
 }
 
+@media screen and (max-width:500px) {
+  .app_container {
+    display: flex;
+    flex-direction: column;
+  }
 
+  .side_bar {
+    gap: 35px;
+    width: 100%;
+    padding: 30px 0 0 10px;
+    border-right: 2px solid lightgrey;
+  }
 
+  .side_bar-image {
+    display: flex;
+    justify-content: space-between;
+    width: 350px;
+  }
+
+  .logo {
+    width: 105px;
+    height: 28px;
+  }
+
+  .dashboard_link {
+    font-weight: 500;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 300px;
+    transition: 0.3s ease-in-out;
+  }
+
+  .nav_bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 50px;
+    height: 100px;
+    width: 300px;
+    background: #436CDF;
+    color: white;
+    border-bottom: 1px solid gray;
+  }
 }
+
+
+/* } */
